--- a/posts/templates/posts/gallery.html
+++ b/posts/templates/posts/gallery.html
@@ -55,7 +55,7 @@
                     <nav class="classy-navbar justify-content-between" id="alimeNav">
 
                         <!-- Logo -->
-                        <a class="nav-brand" href="#"><img src="{% static 'img/core-img/logo.png'%}" alt=""></a>
+                        <a class="nav-brand" href="#"><img src="{% static 'img/core-img/logo.png' %}" alt=""></a>
 
                         <!-- Navbar Toggler -->
                         <div class="classy-navbar-toggler">
@@ -109,7 +109,7 @@
     <!-- Header Area End -->
 
     <!-- Breadcrumb Area Start -->
-    <section class="breadcrumb-area bg-img bg-overlay jarallax" style="background-image: url('{% static 'img/bg-img/38.jpg' %}');">
+    <section class="breadcrumb-area bg-img bg-overlay jarallax" style="background-image: url('{% static 'img/bg-img/38.jpg'%}');">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
@@ -150,7 +150,7 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/bg-img/39.jpg'%}" alt="">
+                        <img src="{% static 'img/bg-img/39.jpg' %}" alt="">
                         <div class="hover-content">
                             <a href="{% static 'img/bg-img/39.jpg' %}" class="portfolio-img">+</a>
                         </div>
@@ -334,7 +334,7 @@
             </div>
             <!-- Single Instagram Item -->
             <div class="single-instagram-item">
-                <img src="{% static 'img/bg-img/15.jpg'%}" alt="">
+                <img src="{% static 'img/bg-img/15.jpg' %}" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="#">
                         <i class="ti-instagram" aria-hidden="true"></i>
@@ -344,7 +344,7 @@
             </div> 
             <!-- Single Instagram Item --> 
             <div class="single-instagram-item">
-                <img src="{% static 'img/bg-img/16.jpg'%}" alt="">
+                <img src="{% static 'img/bg-img/16.jpg' %}" alt="">
                 <div class="instagram-hover-content text-center d-flex align-items-center justify-content-center">
                     <a href="#">
                         <i class="ti-instagram" aria-hidden="true"></i>
@@ -388,15 +388,15 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
     <!-- **** All JS Files ***** -->
     <!-- jQuery 2.2.4 -->
-    <script src="{% static '/js/jquery.min.js' %}"></script>
+    <script src="{% static 'js/jquery.min.js' %}"></script>
     <!-- Popper -->
-    <script src="{% static '/js/popper.min.js' %}"></script>
+    <script src="{% static 'js/popper.min.js' %}"></script>
     <!-- Bootstrap -->
-    <script src="{% static '/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <!-- All Plugins -->
-    <script src="{% static '/js/alime.bundle.js' %}"></script>
+    <script src="{% static 'js/alime.bundle.js' %}"></script>
     <!-- Active -->
-    <script src="{% static '/js/default-assets/active.js' %}"></script>
+    <script src="{% static 'js/default-assets/active.js' %}"></script>
 
 </body>
 
