--- a/posts/templates/posts/new.html
+++ b/posts/templates/posts/new.html
@@ -133,16 +133,24 @@
 
                         <!-- Form -->
                         <form action="#" method="post">
-                            <div class="row">
-                                <div class="col-12 col-md-6">
-                                    <input class="form-control mb-30" placeholder="카테고리 선택하는 부분">
+                            <div class="container">
+                                <div class="form-group">
+                                    <label>카테고리</label>
+                                    <select name="category" id="category">
+                                        <option value="주점">주점</option>
+                                        <option value="부스">부스</option>
+                                        <option value="공연">공연</option>
+                                        <option value="기타">기타</option>
+                                    </select>
+                                </div>
+                            </div>
+                                <div class="col-12">
+                                    <textarea name="text" maxlength="100" class="form-control mb-30" placeholder="제목 입력"></textarea>
                                 </div>
                                 <div class="col-12">
-                                    <input class="form-control mb-30" style="height: 500px; width: 500px;" placeholder="사진/영상 추가하는 부분">
+                                    <input class="form-control mb-30" style="height: 500px; width: 500px;" placeholder="내용 입력">
                                 </div>
-                                <div class="col-12">
-                                    <textarea name="text" maxlength="100" class="form-control mb-30" placeholder="내용 입력"></textarea>
-                                </div>
+                                <input type="file" name="image">
                                 <div class="col-12">
                                     <button type="submit" class="btn alime-btn btn-2 mt-15">Upload</button>
                                 </div>
