모델에 있는 한글을 영어로 수정

--- a/posts/templates/posts/new.html
+++ b/posts/templates/posts/new.html
@@ -137,10 +137,10 @@
                                 <div class="form-group">
                                     <label>카테고리</label>
                                     <select name="category" id="category">
-                                        <option value="주점">주점</option>
-                                        <option value="부스">부스</option>
-                                        <option value="공연">공연</option>
-                                        <option value="기타">기타</option>
+                                        <option value="pub">주점</option>
+                                        <option value="booth">부스</option>
+                                        <option value="performance">공연</option>
+                                        <option value="etc">기타</option>
                                     </select>
                                 </div>
                             </div>
