글자수 제한 해제

--- a/posts/templates/posts/new.html
+++ b/posts/templates/posts/new.html
@@ -145,10 +145,10 @@
                                 </div>
                             </div>
                                 <div class="col-12">
-                                    <textarea name="text" maxlength="100" class="form-control mb-30" placeholder="제목 입력"></textarea>
+                                    <textarea name="text" class="form-control mb-30" name="title" placeholder="제목 입력"></textarea>
                                 </div>
                                 <div class="col-12">
-                                    <input class="form-control mb-30" style="height: 500px; width: 500px;" placeholder="내용 입력">
+                                    <input class="form-control mb-30" name="content" style="height: 500px; width: 500px;" placeholder="내용 입력">
                                 </div>
                                 <input type="file" name="image">
                                 <div class="col-12">
