이미지 accept 속성 추가

--- a/posts/templates/posts/new.html
+++ b/posts/templates/posts/new.html
@@ -150,7 +150,7 @@
                                 <div class="col-12">
                                     <input class="form-control mb-30" name="content" style="height: 500px; width: 500px;" placeholder="내용 입력">
                                 </div>
-                                <input type="file" name="image">
+                                <input type="file" name="image" accept="image/*">
                                 <div class="col-12">
                                     <button type="submit" class="btn alime-btn btn-2 mt-15">Upload</button>
                                 </div>
