--- a/posts/templates/posts/new.html
+++ b/posts/templates/posts/new.html
@@ -145,12 +145,14 @@
                                 </div>
                             </div>
                                 <div class="col-12">
-                                    <textarea class="form-control mb-30" name="title" placeholder="제목 입력"></textarea>
+                                    <input type="text" class="form-control mb-30" name="title" style="width : 500px;" placeholder="제목 입력">
                                 </div>
                                 <div class="col-12">
-                                    <input class="form-control mb-30" name="content" style="height: 500px; width: 500px;" placeholder="내용 입력">
+                                    <textarea class="form-control mb-30" name="content" style="height: 500px; width: 500px;" placeholder="내용 입력"></textarea>
                                 </div>
-                                <input type="file" name="work" accept="image/*, video/*">
+                                <div class="col-12">
+                                    <input type="file" name="mediafile" accept="image/*, video/*">
+                                </div>
                                 <div class="col-12">
                                     <button type="submit" class="btn alime-btn btn-2 mt-15">Upload</button>
                                 </div>
