업로드 폼 css삭제

--- a/posts/templates/posts/new.html
+++ b/posts/templates/posts/new.html
@@ -145,10 +145,10 @@
                                 </div>
                             </div>
                                 <div class="col-12">
-                                    <input type="text" class="form-control mb-30" name="title" style="width : 500px;" placeholder="제목 입력">
+                                    <input type="text" class="form-control mb-30" name="title" placeholder="제목 입력">
                                 </div>
                                 <div class="col-12">
-                                    <textarea class="form-control mb-30" name="content" style="height: 500px; width: 500px;" placeholder="내용 입력"></textarea>
+                                    <textarea class="form-control mb-30" name="content" placeholder="내용 입력"></textarea>
                                 </div>
                                 <div class="col-12">
                                     <input type="file" name="mediafile" accept="image/*, video/*">
