--- a/posts/templates/posts/gallery.html
+++ b/posts/templates/posts/gallery.html
@@ -153,8 +153,12 @@
                 <!-- Single Gallery Item -->
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms">
                     <div class="single-portfolio-content">
-                        <img src="{% static 'img/bg-img/39.jpg' %}" alt="">
-                        <p style="padding-top: 20px; word-break: break-all;">ddddddddfsdlkfnsdlfnlkdsnflkdsjflkjdslkfjsdljflkdsjflkjdslfkjsdlkfjlsdkjflsdkjfljsdlfkjlsdkjflkdsjfl</p>
+                        {% if post.mediafile %}
+                        <img src="{{post.mediafile.url}}" alt="">
+                        {% endif %}
+                        {% if post.title %}
+                        <p style="padding-top: 20px; word-break: break-all;">{{post.title}}</p>
+                        {% endif %}
                         <div class="hover-content">
                             <a href="{% static 'img/bg-img/39.jpg' %}" class="portfolio-img">+</a>
                         </div>
