--- a/posts/templates/posts/gallery.html
+++ b/posts/templates/posts/gallery.html
@@ -137,10 +137,10 @@
                     <div class="alime-projects-menu wow fadeInUp" data-wow-delay="100ms">
                         <div class="portfolio-menu text-center">
                             <button class="btn active" data-filter="*">All</button>
-                            <button class="btn" data-filter=".human">Human</button>
-                            <button class="btn" data-filter=".nature">Nature</button>
-                            <button class="btn" data-filter=".country">Country</button>
-                            <button class="btn" data-filter=".video">Video</button>
+                            <button class="btn" data-filter=".pub">주점</button>
+                            <button class="btn" data-filter=".booth">부스</button>
+                            <button class="btn" data-filter=".performance">공연</button>
+                            <button class="btn" data-filter=".etc">기타</button>
                         </div>
                         <button class="btn">
                             <a href="{% url 'posts:new' %}">업로드</a>
@@ -152,20 +152,72 @@
             <div class="row alime-portfolio">
                 <!-- Single Gallery Item -->
                 {% for post in posts %}
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item nature mb-30 wow fadeInUp" data-wow-delay="100ms">
-                    <div class="single-portfolio-content">
-                        {% if post.mediafile %}
-                        <img src ="{{post.mediafile.url}}" alt="">
-                        <div class="hover-content">
-                            <a href="{{post.mediafile.url}}" class="portfolio-img">+</a>
+                    {% if post.category == "pub" %}
+                    <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 pub wow fadeInUp" data-wow-delay="100ms">
+                        <div class="single-portfolio-content">
+                            {% if post.mediafile %}
+                            <img src ="{{post.mediafile.url}}" alt="">
+                            <div class="hover-content">
+                                <a href="{{post.mediafile.url}}" class="portfolio-img">+</a>
+                            </div>
+                            {% endif %}
+                            {% if post.title %}
+                            <p style="padding-top: 20px; word-break: break-all;">{{post.title}}</p>
+                            {% endif %}
                         </div>
-                        {% endif %}
-                        {% if post.title %}
-                        <p style="padding-top: 20px; word-break: break-all;">{{post.title}}</p>
-                        {% endif %}
-                        
                     </div>
-                </div>
+                    {% endif %}
+                {% endfor %}
+                {% for post in posts %}
+                    {% if post.category == "booth" %}
+                    <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 booth wow fadeInUp" data-wow-delay="100ms">
+                        <div class="single-portfolio-content">
+                            {% if post.mediafile %}
+                            <img src ="{{post.mediafile.url}}" alt="">
+                            <div class="hover-content">
+                                <a href="{{post.mediafile.url}}" class="portfolio-img">+</a>
+                            </div>
+                            {% endif %}
+                            {% if post.title %}
+                            <p style="padding-top: 20px; word-break: break-all;">{{post.title}}</p>
+                            {% endif %}
+                        </div>
+                    </div>
+                    {% endif %}
+                {% endfor %}
+                {% for post in posts %}
+                    {% if post.category == "performance" %}
+                    <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 performance wow fadeInUp" data-wow-delay="100ms">
+                        <div class="single-portfolio-content">
+                            {% if post.mediafile %}
+                            <img src ="{{post.mediafile.url}}" alt="">
+                            <div class="hover-content">
+                                <a href="{{post.mediafile.url}}" class="portfolio-img">+</a>
+                            </div>
+                            {% endif %}
+                            {% if post.title %}
+                            <p style="padding-top: 20px; word-break: break-all;">{{post.title}}</p>
+                            {% endif %}
+                        </div>
+                    </div>
+                    {% endif %}
+                {% endfor %}
+                {% for post in posts %}
+                    {% if post.category == "etc" %}
+                    <div class="col-12 col-sm-6 col-lg-3 single_gallery_item mb-30 etc wow fadeInUp" data-wow-delay="100ms">
+                        <div class="single-portfolio-content">
+                            {% if post.mediafile %}
+                            <img src ="{{post.mediafile.url}}" alt="">
+                            <div class="hover-content">
+                                <a href="{{post.mediafile.url}}" class="portfolio-img">+</a>
+                            </div>
+                            {% endif %}
+                            {% if post.title %}
+                            <p style="padding-top: 20px; word-break: break-all;">{{post.title}}</p>
+                            {% endif %}
+                        </div>
+                    </div>
+                    {% endif %}
                 {% endfor %}
         </div>
         <div class="row">
