--- a/posts/templates/posts/new.html
+++ b/posts/templates/posts/new.html
@@ -146,13 +146,13 @@
                                 </div>
                             </div>
                                 <div class="col-12">
-                                    <input type="text" class="form-control mb-30" name="title" placeholder="제목 입력">
+                                    <input type="text" class="form-control mb-30" name="title" placeholder="제목 입력" required>
                                 </div>
                                 <div class="col-12">
-                                    <textarea class="form-control mb-30" name="content" placeholder="내용 입력"></textarea>
+                                    <textarea class="form-control mb-30" name="content" placeholder="내용 입력" required></textarea>
                                 </div>
                                 <div class="col-12">
-                                    <input type="file" name="mediafile" accept="image/*, video/*">
+                                    <input type="file" name="mediafile" accept="image/*, video/*" required>
                                 </div>
                                 <div class="col-12">
                                     <button type="submit" class="btn alime-btn btn-2 mt-15">Upload</button>
